# smt

./: LLM_Spec.md  README.md  Reference.md  TODO.md  punching_shear_mvp.ipynb  pyproject.toml
Models/: Materials.py  Results.py
Tests/: test_calculator.py  test_geometry.py
Tests/Codes/: CSA_A23_3_19.py
Tests/Core/: Geometry.py
Utilities/: plotting.py
